make two card responsive

--- a/index.html
+++ b/index.html
@@ -172,9 +172,9 @@
             </div>
         </div>
     </div>
-    <hr class="md:my-[116px] md:mx-[150px] border-gray-200">
-    <div class="md:flex md:px-[62px] px-5 pt-20">
-        <div class="md:w-[531px] md:ml-20 mt-10 w-full sm:order-2">
+    <hr class="md:my-[116px] md:mx-[150px] m-20 border-gray-200">
+    <div class="md:flex md:px-[62px] px-6 md:pt-20">
+        <div class="md:w-[531px] md:ml-20 md:mt-10 w-full order-2">
             <h1 class=" md:text-3xl text-2xl font-bold">Persönlicher und regionaler Support aus Österreich</h1>
             <p class="md:mr-13 mt-[18px]">Wir sind ein österreichisches Unternehmen mit Standorten in allen Bundesländern. Sie erreichen uns jederzeit – und bei dringenden Fällen sind wir blitzschnell vor Ort!</p>
                 <div class="mt-6">
@@ -188,113 +188,114 @@
                 </div>
                  <div class="flex gap-2 mt-3">
                     <div class="mt-1"><img src="/img/check-mark.png" alt=""></div>
-                     <p class="mr-15">Verlassen Sie sich auf <strong>erstklassigen Support aus Österreich</strong> mit persönlicher Betreuung vor Ort.></p>
+                     <p class="mr-15">Verlassen Sie sich auf <strong>erstklassigen Support aus Österreich</strong> mit persönlicher Betreuung vor Ort.</p>
                 </div>
             </div>
         </div>
-        <div class="sm-px6 sm:order-1">
+        <div class="sm-px6 mt-10">
             <img src="./img/laptop-img .png" alt="">
         </div>
     </div>
-    <hr class="my-[116px] mx-[150px] border-gray-200">
-    <div class="flex px-[62px] pt-20">
-        <div class="ml-20 border-1 border-yellow-500 rounded-lg bg-[#FAF7EB]">
+    <hr class="md:my-[116px] md:mx-[150px] m-20 border-gray-200">
+    <div class="md:flex md:px-[62px] px-6 md:pt-20">
+        <div class="md:ml-20 border-1 border-yellow-500 rounded-lg bg-[#FAF7EB]">
             <img src="./img/group-class.png" alt="">
         </div>
-        <div class="pl-[62px] w-[557px]">
-            <h1 class="text-3xl font-bold">Über 150 Premium Funktionen für Ihre Business-Telefonie</h1>
-            <p class="mr-20 mt-4">Mit unserer Cloud-Telefonanlage erhalten Sie alle Funktionen einer Enterprise-Telefonanlage – nur einfacher zu bedienen und zu einem Bruchteil der Kosten.</p>
-
+        <div class="md:pl-[62px] md:w-[557px] mt-7">
+            <h1 class="md:text-3xl font-bold text-2xl">Über 150 Premium Funktionen für Ihre Business-Telefonie</h1>
+            <p class="md:mr-20 mt-4">Mit unserer Cloud-Telefonanlage erhalten Sie alle Funktionen einer Enterprise-Telefonanlage – nur einfacher zu bedienen und zu einem Bruchteil der Kosten.</p>
                 <div class="mt-6">
                 <div class="flex gap-2">
                     <div class="mt-1"><img src="/img/check-mark.png" alt=""></div>
-                     <p class="mr-15">Eine smarte <strong> digitale Rezeption</strong> leitet Ihre Anrufer sofort zum richtigen Ansprechpartner weiter.</p>
+                     <p class="md:mr-15">Eine smarte <strong> digitale Rezeption</strong> leitet Ihre Anrufer sofort zum richtigen Ansprechpartner weiter.</p>
                 </div>
                 <div class="flex gap-2 mt-3">
                     <div class="mt-1"><img src="/img/check-mark.png" alt=""></div>
-                     <p class="mr-10">Unser <strong>intelligentes Warteschleifensystem</strong> mit <strong> Rückrufoptionen</strong> sorgt für <strong>zufriedene Kunden.</strong></p>
+                     <p class="md:mr-10 mr-3">Unser <strong>intelligentes Warteschleifensystem</strong> mit <strong> Rückrufoptionen</strong> sorgt für <strong>zufriedene Kunden.</strong></p>
                 </div>
                  <div class="flex gap-2 mt-3">
                     <div class="mt-1"><img src="/img/check-mark.png" alt=""></div>
-                     <p class="mr-15">Nahtlose Anrufweiterleitung auf mobile Geräte, Call Recording, Konferenzschaltungen,<strong>und vieles mehr.</strong></p>
+                     <p class="md:mr-15 mr-[17px]">Nahtlose Anrufweiterleitung auf mobile Geräte, Call Recording, Konferenzschaltungen,<strong>und vieles mehr.</strong></p>
                 </div>
             </div>
         </div>
     </div>
-    <hr class="my-[116px] mx-[150px] border-gray-200">
-    <div class="flex px-[62px] pt-20">
-        <div class="w-[531px] ml-20 mt-10">
-            <h1 class="text-3xl font-bold mr-10">Professionelle Geschäftsanrufe von jedem Gerät aus tätigen</h1>
-            <p class="mr-25 mt-5">Bleiben Sie überall erreichbar – ob im Büro, unterwegs oder im Home-Office:</p>
+    <hr class="md:my-[116px] md:mx-[150px] m-20 border-gray-200">
+    <div class="md:flex md:px-[62px] md:pt-20 px-6">
+        <div class="md:w-[531px] md:ml-20 md:mt-10">
+            <h1 class="md:text-3xl text-2xl mr-4 font-bold md:mr-10">Professionelle Geschäftsanrufe von jedem Gerät aus tätigen</h1>
+            <p class="md:mr-25 mt-5">Bleiben Sie überall erreichbar – ob im Büro, unterwegs oder im Home-Office:</p>
             <div class="mt-6">
                 <div class="flex gap-2">
                     <div class="mt-1"><img src="/img/check-mark.png" alt=""></div>
-                     <p class="mr-15">Nutzen Sie Ihre geschäftliche Rufnummer auf allen Geräten: <strong>Tischtelefon, Smartphone oder Computer.</strong></p>
+                     <p class="md:mr-15">Nutzen Sie Ihre geschäftliche Rufnummer auf allen Geräten: <strong>Tischtelefon, Smartphone oder Computer.</strong></p>
                 </div>
                 <div class="flex gap-2 mt-3">
                     <div class="mt-1"><img src="/img/check-mark.png" alt=""></div>
-                     <p class="mr-20">Wechseln Sie nahtlos zwischen <strong>verschiedenen Arbeitsorten.</strong> Ihre Erreichbarkeit bleibt konstant.</p>
+                     <p class="md:mr-20 mr-5">Wechseln Sie nahtlos zwischen <strong>verschiedenen Arbeitsorten.</strong> Ihre Erreichbarkeit bleibt konstant.</p>
                 </div>
                  <div class="flex gap-2 mt-3">
                     <div class="mt-1"><img src="/img/check-mark.png" alt=""></div>
-                     <p class="mr-15">Ermöglichen Sie Ihrem Team <strong>maximale Bewegungsfreiheit</strong> bei gleichbleibend <strong>professionellem Auftreten.</strong></p>
+                     <p class="md:mr-15">Ermöglichen Sie Ihrem Team <strong>maximale Bewegungsfreiheit</strong> bei gleichbleibend <strong>professionellem Auftreten.</strong></p>
                 </div>
             </div>
         </div>
-        <div class="border-2 border-yellow-400 rounded-lg bg-[#FAF7EB]"><img src="./img/image 506.png" alt=""></div>
+        <div class="border-2 border-yellow-400 rounded-lg bg-[#FAF7EB] mt-10"><img src="./img/image 506.png" alt=""></div>
     </div>
         <hr class="my-[116px] mx-[150px] border-gray-200">
-        <div class="flex px-[62px] pt-20 mb-50">
-            <div class="flex">
-                <div class="ml-20 mr-15 w-[620px]">
+        <div class="md:flex md:px-[62px] md:pt-20 md:mb-50 px-6">
+                <div class="md:ml-20 md:mr-15 md:w-[620px]">
                     <img src="/img/group-img-with-border.svg" alt="">
                 </div>
-                <div class="w-[512px]">
-                    <h1 class="text-3xl font-bold">Nahtlose Integration mit Ihren bestehenden Systemen</h1>
-                    <p class="mt-5 mr-25">Vernetzen Sie Ihre Kommunikation <strong>auf Knopfdruck</strong> mit all Ihren Tools und Geschäftsprozessen:</p>
+                <div class="md:w-[512px] mt-20">
+                    <h1 class="md:text-3xl text-2xl font-bold">Nahtlose Integration mit Ihren bestehenden Systemen</h1>
+                    <p class="mt-5 md:mr-25 ">Vernetzen Sie Ihre Kommunikation <strong>auf Knopfdruck</strong> mit all Ihren Tools und Geschäftsprozessen:</p>
                      <div class="mt-6">
                 <div class="flex gap-2">
                     <div class="mt-1"><img src="/img/check-mark.png" alt=""></div>
-                     <p class="mr-15">Steigern Sie Ihre Servicequalität durch <strong>sofortigen Zugriff auf Kundeninformationen bei eingehenden Anrufen.</strong></p>
+                     <p class="md:mr-15">Steigern Sie Ihre Servicequalität durch <strong>sofortigen Zugriff auf Kundeninformationen bei eingehenden Anrufen.</strong></p>
                 </div>
                 <div class="flex gap-2 mt-3">
                     <div class="mt-1"><img src="/img/check-mark.png" alt=""></div>
-                     <p class="mr-25">Dokumentieren Sie jede Kundeninteraktion <strong> automatisch</strong> in Ihrem CRM-System.</p>
+                     <p class="md:mr-25">Dokumentieren Sie jede Kundeninteraktion <strong> automatisch</strong> in Ihrem CRM-System.</p>
                 </div>
                  <div class="flex gap-2 mt-3">
                     <div class="mt-1"><img src="/img/check-mark.png" alt=""></div>
-                     <p class="mr-15">Optimieren Sie Ihre Workflows durch direkte <strong> Verknüpfung von Telefonaten mit digitalen Kundenakten.</strong></p>
+                     <p class="md:mr-15">Optimieren Sie Ihre Workflows durch <strong> direkte Verknüpfung von Telefonaten mit digitalen Kundenakten.</strong></p>
                 </div>
             </div>
                 </div>
-            </div>
         </div>
-    <div class="bg-[#FAF7EB]">
+    <div class="bg-[#FAF7EB] px-6">
         <hr class="border-1 border-yellow-500">
-        <h1 class="text-3xl font-bold mt-10 ml-90 mt-30 mb-10">60% weniger Kosten bei 100x mehr Leistung</h1>
-
-        <div class="flex ml-60">
-            <img src="/img/check-mark.png" alt="" class="mr-3 ml-10">
+        <h1 class="text-3xl font-bold  md:ml-90 mt-30 mb-10">60% weniger Kosten bei 100x mehr Leistung</h1>
+        <div class="flex md:ml-60">
+            <div>
+                <img src="/img/check-mark.png" alt="" class="mr-3 md:ml-10 ">
+            </div>
             <p>Genießen Sie volle Planungssicherheit durch eine <strong>All-inclusive-Pauschale</strong> ohne Überraschungen.</p>
         </div>
-            <div class="flex ml-60">
-                <img src="/img/check-mark.png" alt="" class="mr-3 ml-10">
+            <div class="flex md:ml-60 mt-4">
+                <div>
+                    <img src="/img/check-mark.png" alt="" class="mr-3 md:ml-10">
+                </div>
                 <p>Bis zu <strong>60% Kostenersparnis</strong> gegenüber konventionellen Telefonanlagen – bei deutlich mehr Funktionsumfang.</p>
             </div>
-
-            <div class="flex ml-60">
-                <img src="/img/check-mark.png" alt="" class="mr-3 ml-10 pb-20">
+            <div class="flex md:ml-60 mt-4">
+                <div>
+                    <img src="/img/check-mark.png" alt="" class="mr-3 md:ml-10 md:pb-20">
+                </div>
                 <p><strong>Reduzieren Sie Ihre Mobilfunkkosten</strong> durch intelligente Cloud Telefonie auf allen Geräten.</p>
                 </div>
-                <div class="flex pb-20">
+                <div class="md:flex pb-20 mt-4">
                 <div>
-                    <div class="mt-30 border-2 border-yellow-500 rounded-lg bg-white ml-20 mr-10">
-                            <div class="flex pt-10 ml-15">
+                    <div class="mt-30 border-2 border-yellow-500 rounded-lg bg-white md:ml-20 md:mr-10">
+                            <div class="flex md:pt-10 md:ml-15 ml-5">
                                 <img src="/img/cloud-tag.png" alt="">
-                                 <h2 class="text-4xl font-bold text-yellow-600 ml-5 mt-2">
+                                 <h2 class="md:text-4xl font-bold text-yellow-600 md:ml-5 mt-4 text-2xl">
                                  Cloud Telefonie Pakete</h2>
                             </div>
-                            <div class="flex mt-5 pr-10 mb-10">
+                            <div class="md:flex mt-5 pr-10 mb-10">
                             <div class="ml-10">
                           <div class="flex mt-2">
                         <img src="/img/check-mark.png" alt="">
@@ -331,35 +332,35 @@
                     </div>
                     <hr class="m-10 border-yellow-500">
                     <div>
-                        <div class="flex ml-10">
-                            <p class="mr-60">Schon ab</p>
+                        <div class="flex md:ml-10 ml-7">
+                            <p class="md:mr-60 mr-23">Schon ab</p>
                             <p>Schon ab</p>
                         </div>
-                        <div class="flex">
-                        <div class="flex ml-10 mt-2">
-                            <h2 class="font-bold text-4xl text-yellow-700">€14,90</h2>
-                            <p class="mt-3 font-bold ml-2">/ Monat</p>
+                        <div class="flex gap-5">
+                        <div class="flex ml-5 md:ml-10 mt-2">
+                            <h2 class="font-bold text-2xl md:text-4xl text-yellow-700 ">€14,90</h2>
+                            <p class=" mt-1 md:mt-3 font-bold ml-2">/ Monat</p>
                         </div>
-                        <div class="flex ml-10 mt-2">
-                            <h2 class="font-bold text-4xl text-yellow-700 ml-20">€58,90</h2>
-                            <p class="mt-3 font-bold ml-2">/ Monat</p>
+                        <div class="flex md:ml-10 mt-2">
+                            <h2 class="font-bold text-2xl md:text-4xl text-yellow-700 md:ml-20">€58,90</h2>
+                            <p class=" mt-1 md:mt-3 font-bold ml-2">/ Monat</p>
                         </div> 
                         </div>
-                            <div class="flex ml-10 pb-5">
-                            <p class="mr-57">pro Nutzer</p>
+                            <div class="flex ml-7 md:ml-10 pb-5 ">
+                            <p class="md:mr-57 mr-20">pro Nutzer</p>
                             <p>für unbegrenzte Nutzer</p>
                         </div>
                     </div>
                     </div>
                 </div>
                      <div>
-                    <div class="mt-30 border-2 border-yellow-500 rounded-lg bg-white  ">
-                            <div class="flex pt-10 ml-15">
+                    <div class="mt-30 border-2 border-yellow-500 rounded-lg bg-white">
+                            <div class="flex pt-10 md:ml-15 ml-5">
                                 <img src="/img/sell-tag.png" alt="">
-                                 <h2 class="text-4xl font-bold text-yellow-600 ml-5">
+                                 <h2 class="md:text-4xl text-3xl font-bold text-yellow-600 ml-5 mt-1">
                                  Telefon Tarife</h2>
                             </div>
-                            <div class="flex mt-5 pr-10 mb-10">
+                            <div class="md:flex mt-5 pr-10 mb-10">
                             <div class="ml-10 ">
                           <div class="flex mt-2">
                         <img src="/img/check-mark.png" alt="">
@@ -396,22 +397,22 @@
                         </div>
                         <hr class="m-10 border-yellow-500">
                     <div>
-                        <div class="flex ml-10">
-                            <p class="mr-57">Schon ab</p>
+                        <div class="flex ml-5">
+                            <p class="md:mr-57 mr-30">Schon ab</p>
                             <p>Schon ab</p>
                         </div>
                         <div class="flex">
-                        <div class="flex ml-10 mt-2">
-                            <h2 class="font-bold text-4xl text-yellow-700">4,9 Cent</h2>
-                            <p class="mt-3 font-bold ml-2">/ Minute</p>
+                        <div class="flex md:ml-10 ml-4 md:mt-2">
+                            <h2 class="font-bold md:text-4xl text-2xl text-yellow-700">4,9 Cent</h2>
+                            <p class="md:mt-3 mt-1 font-bold ml-2">/ Minute</p>
                         </div>
-                        <div class="flex ml-10 mt-2">
-                            <h2 class="font-bold text-4xl text-yellow-700 ml-10">€14,90</h2>
-                            <p class="mt-3 font-bold ml-2">/ Monat</p>
+                        <div class="flex md:ml-10 md:mt-2">
+                            <h2 class="font-bold text-2xl md:text-4xl text-yellow-700 md:ml-10 ml-5">€14,90</h2>
+                            <p class="md:mt-3 mt-1 font-bold ml-2">/ Monat</p>
                         </div> 
                         </div>
-                            <div class="flex ml-10 pb-5">
-                            <p class="mr-30">bei Freiminuten-Paketen</p>
+                            <div class="flex md:ml-10 pb-5 ml-4">
+                            <p class="md:mr-30 mr-7">bei Freiminuten-Paketen</p>
                             <p>für unbegrentzte Minuten</p>
                         </div>
                     </div>
@@ -419,9 +420,9 @@
                 </div>
                 </div>
                 <div>
-                    <button class="ml-120 w-100 bg-yellow-500 rounded-full p-3 text-white font-bold hover:bg-yellow-200">Jetzt Kostenlos Beraten Lassen</button>
+                    <button class="md:ml-120 w-90 bg-yellow-500 rounded-full p-3 text-white font-bold hover:bg-yellow-200">Jetzt Kostenlos Beraten Lassen</button>
                 </div>
-                <div class="flex ml-130 mt-2 pb-10">
+                <div class="flex ml-5 md:ml-130 mt-2 pb-10">
                     <img src="/img/star.png" alt="">
                     <img src="/img/star.png" alt="">
                     <img src="/img/star.png" alt="">
