--- a/index.html
+++ b/index.html
@@ -434,14 +434,14 @@
                 </div>
     </div>
     <div>
-        <div class="p-20">
-            <h1 class="text-4xl font-bold mb-3 text-center">Das sagen unsere Kunden</h1>
-            <p class="text-center">Unternehmen wie Ihres vertrauen bereits auf Hostprofis</p>
+        <div class="md:p-20 p-10">
+            <h1 class="md:text-4xl font-bold mb-3 md:text-center text-[25px]">Das sagen unsere Kunden</h1>
+            <p class="md:text-center">Unternehmen wie Ihres vertrauen bereits auf Hostprofis</p>
         </div>
-        <div class="flex">
-            <div class="ml-10">
-                <div class="border-1 border-yellow-500 w-100 rounded-lg p-5 bg-[#FAF7EB] mb-10">
-                    <p class="w-75">"Früher hatten unsere Kunden nur unsere privaten Handynummern. Jetzt erreichen sie eine professionelle automatische Zentrale, die sie direkt zum richtigen Ansprechpartner weiterleitet"</p>
+        <div class="md:flex mx-4">
+            <div class="">
+                <div class="border-1 border-yellow-500 w-full md:w-100 rounded-lg p-5 bg-[#FAF7EB] mb-10">
+                    <p class="md:w-75">"Früher hatten unsere Kunden nur unsere privaten Handynummern. Jetzt erreichen sie eine professionelle automatische Zentrale, die sie direkt zum richtigen Ansprechpartner weiterleitet"</p>
                     <div class="flex mt-5 pb-5">
                         <img src="/img/michelle-menger.png" alt="">
                         <div class="ml-3">
@@ -513,7 +513,7 @@
                     </div>
                 </div>
             </div>
-             <div class="ml-10">
+             <div class="md:ml-10">
                 <div class="border-1 border-yellow-500 w-100 rounded-lg p-5 bg-[#FAF7EB] mb-10">
                     <p class="w-80">"Wir haben jährlich €3.000 nur für Wartung bezahlt. Mit Hostprofis konnten wir unsere Telefonkosten um 55 % senken und alles funktioniert reibungslos!"</p>
                     <div class="flex mt-5 pb-5">
@@ -587,7 +587,7 @@
                     </div>
                 </div>
             </div>
-                  <div class="ml-10 pb-10">
+                  <div class="md:ml-10 md:pb-10">
                 <div class="border-1 border-yellow-500 w-100 rounded-lg  p-5 bg-[#FAF7EB] mb-10">
                     <p class="w-78">“Unsere ISDN-Leitung wurde mit nur 6 Wochen Frist gekündigt. Hostprofis hat unser neues System in nur 14 Tagen eingerichtet, Keine Ausfallzeit, kein Stress!”</p>
                     <div class="flex mt-5 pb-5">
