--- a/index.html
+++ b/index.html
@@ -423,11 +423,7 @@
                     <button class="md:ml-120 w-90 bg-yellow-500 rounded-full p-3 text-white font-bold hover:bg-yellow-200">Jetzt Kostenlos Beraten Lassen</button>
                 </div>
                 <div class="flex ml-5 md:ml-130 mt-2 pb-10">
-                    <img src="/img/star.png" alt="">
-                    <img src="/img/star.png" alt="">
-                    <img src="/img/star.png" alt="">
-                    <img src="/img/star.png" alt="">
-                    <img src="/img/star.png" alt="">
+                    <img src="/img/five-stars.svg" alt="">
                     <div>
                         <p>Über <strong>40.000</strong> zufriedene Kunden</p>
                     </div>
@@ -663,106 +659,106 @@
             </div>
     </div>
 </div>
-<div class="bg-[#FAF7EB] flex">               
+<div class="bg-[#FAF7EB] md:flex px-6">               
     <div class="ml-10 pt-10">
-        <h2 class="text-4xl font-bold w-90">Häufig gestellte Fragen</h2>
-        <p class="w-80 mt-3">Brauchen Sie mehr Informationen? Hier finden Sie die Antworten.</p>
+        <h2 class="text-4xl font-bold md:w-90">Häufig gestellte Fragen</h2>
+        <p class="md:w-80 mt-3">Brauchen Sie mehr Informationen? Hier finden Sie die Antworten.</p>
     </div>
     <div class="pb-10">
-        <div class="border-1 border-yellow-500 rounded-lg p-10 ml-30 mt-10 mr-10">
+        <div class="border-1 border-yellow-500 rounded-lg md:p-10 p-6 md:ml-30 mt-10 md:mr-10">
             <h1 class="text-2xl font-bold">Was ist die Cloud-Telefonie von Hostprofis?</h1>
-            <p class="w-165 mt-2">Eine komplette Telefonanlage für Unternehmen, die über das Internet funktioniert. Sie bietet alle Funktionen eines klassischen Telefonsystems und zusätzlich moderne Features wie mobile Apps und Videotelefonie – alles betreut von einem lokalen österreichischen Team.</p>
+            <p class="md:w-165 mt-2">Eine komplette Telefonanlage für Unternehmen, die über das Internet funktioniert. Sie bietet alle Funktionen eines klassischen Telefonsystems und zusätzlich moderne Features wie mobile Apps und Videotelefonie – alles betreut von einem lokalen österreichischen Team.</p>
         </div>
-        <div class="border-1 border-yellow-500 rounded-lg mt-10 ml-30 mr-10">
-            <p class="font-bold p-3 flex justify-between">
+        <div class="border-1 border-yellow-500 rounded-lg mt-10 md:ml-30 md:mr-10">
+            <p class="font-bold p-3 flex justify-between items-center">
                 Brauche ich spezielle Telefone oder Geräte?
-                <i class="fa-solid fa-plus  border-2 border-black rounded-full p-1"></i>
+                <i class="fa-solid fa-plus border-2 border-black rounded-full p-1 max-h-fit"></i>
             </p>
         </div>
-        <div class="border-1 border-yellow-500 rounded-lg mt-10 ml-30 mr-10">
-            <p class="font-bold p-3 flex justify-between">
+        <div class="border-1 border-yellow-500 rounded-lg mt-10 md:ml-30 md:mr-10">
+            <p class="font-bold p-3 flex justify-between items-center">
                 Kann ich meine bestehenden Telefonnummern behalten?                
-                <i class="fa-solid fa-plus border-2 border-black rounded-full p-1"></i>
+                <i class="fa-solid fa-plus border-2 border-black rounded-full p-1 max-h-fit"></i>
             </p>
         </div>
-        <div class="border-1 border-yellow-500 rounded-lg mt-10 ml-30 mr-10">
-            <p class="font-bold p-3 flex justify-between">
+        <div class="border-1 border-yellow-500 rounded-lg mt-10 md:ml-30 md:mr-10">
+            <p class="font-bold p-3 flex justify-between items-center">
                 Kann ich das System im Homeoffice nutzen?
-                <i class="fa-solid fa-plus border-2 border-black rounded-full p-1"></i>
+                <i class="fa-solid fa-plus border-2 border-black rounded-full p-1 max-h-fit"></i>
             </p>
         </div>
-        <div class="border-1 border-yellow-500 rounded-lg mt-10 ml-30 mr-10">
-            <p class="font-bold p-3 flex justify-between">
+        <div class="border-1 border-yellow-500 rounded-lg mt-10 md:ml-30 md:mr-10">
+            <p class="font-bold p-3 flex justify-between items-center">
                 Wie viel kostet das?
-                <i class="fa-solid fa-plus border-2 border-black rounded-full p-1"></i>
+                <i class="fa-solid fa-plus border-2 border-black rounded-full p-1 max-h-fit"></i>
             </p>
         </div>
-        <div class="border-1 border-yellow-500 rounded-lg mt-10 ml-30 mr-10">
-            <p class="font-bold p-3 flex justify-between">
+        <div class="border-1 border-yellow-500 rounded-lg mt-10 md:ml-30 md:mr-10">
+            <p class="font-bold p-3 flex justify-between items-center">
                 Gibt es Einrichtungsgebühren?
-                <i class="fa-solid fa-plus border-2 border-black rounded-full p-1"></i>
+                <i class="fa-solid fa-plus border-2 border-black rounded-full p-1 max-h-fit"></i>
             </p>
         </div>
-        <div class="border-1 border-yellow-500 rounded-lg mt-10 ml-30 mr-10">
-            <p class="font-bold p-3 flex justify-between">
+        <div class="border-1 border-yellow-500 rounded-lg mt-10 md:ml-30 md:mr-10">
+            <p class="font-bold p-3 flex justify-between items-center">
                 Wie lange dauert die Einrichtung?
-                <i class="fa-solid fa-plus border-2 border-black rounded-full p-1"></i>
+                <i class="fa-solid fa-plus border-2 border-black rounded-full p-1 max-h-fit"></i>
             </p>
         </div>
-        <div class="border-1 border-yellow-500 rounded-lg mt-10 ml-30 mr-10">
-            <p class="font-bold p-3 flex justify-between">
+        <div class="border-1 border-yellow-500 rounded-lg mt-10 md:ml-30 md:mr-10">
+            <p class="font-bold p-3 flex justify-between items-center">
                 Wo werden meine Daten gespeichert?
-                <i class="fa-solid fa-plus border-2 border-black rounded-full p-1"></i>
+                <i class="fa-solid fa-plus border-2 border-black rounded-full p-1 max-h-fit"></i>
             </p>
         </div>
-        <div class="border-1 border-yellow-500 rounded-lg mt-10 ml-30 mr-10">
-            <p class="font-bold p-3 flex justify-between">
+        <div class="border-1 border-yellow-500 rounded-lg mt-10 md:ml-30 md:mr-10">
+            <p class="font-bold p-3 flex justify-between items-center">
                 Wie lernen meine Mitarbeiter, das System zu nutzen?
-                <i class="fa-solid fa-plus border-2 border-black rounded-full p-1"></i>
+                <i class="fa-solid fa-plus border-2 border-black rounded-full p-1 max-h-fit"></i>
             </p>
         </div>
-        <div class="border-1 border-yellow-500 rounded-lg mt-10 ml-30 mr-10">
-            <p class="font-bold p-3 flex justify-between">
+        <div class="border-1 border-yellow-500 rounded-lg mt-10 md:ml-30 md:mr-10">
+            <p class="font-bold p-3 flex justify-between items-center">
                 Welchen Support bieten Sie?
-                <i class="fa-solid fa-plus border-2 border-black rounded-full p-1"></i>
+                <i class="fa-solid fa-plus border-2 border-black rounded-full p-1 max-h-fit"></i>
             </p>
         </div>
-        <div class="border-1 border-yellow-500 rounded-lg mt-10 ml-30 mr-10">
-            <p class="font-bold p-3 flex justify-between">
+        <div class="border-1 border-yellow-500 rounded-lg mt-10 md:ml-30 md:mr-10">
+            <p class="font-bold p-3 flex justify-between items-center">
                 Wo sitzt Ihr Support-Team?
-                <i class="fa-solid fa-plus border-2 border-black rounded-full p-1"></i>
+                <i class="fa-solid fa-plus border-2 border-black rounded-full p-1 max-h-fit"></i>
             </p>
         </div>
-        <div class="border-1 border-yellow-500 rounded-lg mt-10 ml-30 mr-10">
-            <p class="font-bold p-3 flex justify-between">
+        <div class="border-1 border-yellow-500 rounded-lg mt-10 md:ml-30 md:mr-10">
+            <p class="font-bold p-3 flex justify-between items-center">
                Was, wenn ich Änderungen an meinem System brauche?
-                <i class="fa-solid fa-plus border-2 border-black rounded-full p-1"></i>
+                <i class="fa-solid fa-plus border-2 border-black rounded-full p-1 max-h-fit"></i>
             </p>
         </div>
-        <div class="border-1 border-yellow-500 rounded-lg mt-10 ml-30 mr-10">
-            <p class="font-bold p-3 flex justify-between">
+        <div class="border-1 border-yellow-500 rounded-lg mt-10 md:ml-30 md:mr-10">
+            <p class="font-bold p-3 flex justify-between items-center">
                 Kann ich das System mit meinem CRM integrieren?
-                <i class="fa-solid fa-plus border-2 border-black rounded-full p-1"></i>
+                <i class="fa-solid fa-plus border-2 border-black rounded-full p-1 max-h-fit"></i>
             </p>
         </div>
-        <div class="border-1 border-yellow-500 rounded-lg mt-10 ml-30 mr-10">
-            <p class="font-bold p-3 flex justify-between">
+        <div class="border-1 border-yellow-500 rounded-lg mt-10 md:ml-30 md:mr-10">
+            <p class="font-bold p-3 flex justify-between items-center">
                Welche Internetgeschwindigkeit brauche ich?
-                <i class="fa-solid fa-plus border-2 border-black rounded-full p-1"></i>
+                <i class="fa-solid fa-plus border-2 border-black rounded-full p-1 max-h-fit"></i>
             </p>
         </div>
-        <div class="border-1 border-yellow-500 rounded-lg mt-10 ml-30 mr-10 ">
-            <p class="font-bold p-3 flex justify-between">
+        <div class="border-1 border-yellow-500 rounded-lg mt-10 md:ml-30 md:mr-10 ">
+            <p class="font-bold p-3 flex justify-between items-center">
                 Was passiert, wenn mein Internet ausfällt?
-                <i class="fa-solid fa-plus border-2 border-black rounded-full p-1"></i>
+                <i class="fa-solid fa-plus border-2 border-black rounded-full p-1 max-h-fit"></i>
             </p>
         </div>
     </div>
 </div>
-<div class="flex">
-<div class="ml-[71px] mt-[120px] bg bg-no-repeat bg-right">
-    <h1 class="text-5xl font-bold mr-[500px]">Starten Sie jetzt mit moderner Cloud-Telefonie</h1>
-    <p class="mt-6 w-140">Vereinbaren Sie ein kurzes Gespräch mit unserem Team und erleben Sie, wie viel einfacher Geschäftstelefonie sein kann.</p>
+<div class="md:flex px-6">
+<div class="md:ml-[71px] md:mt-[120px] mt-[56px]">
+    <h1 class="md:text-5xl font-bold md:mr-[500px] text-3xl">Starten Sie jetzt mit moderner Cloud-Telefonie</h1>
+    <p class="mt-6 md:w-140">Vereinbaren Sie ein kurzes Gespräch mit unserem Team und erleben Sie, wie viel einfacher Geschäftstelefonie sein kann.</p>
     <div class="flex mt-6 gap-3">
         <img src="./img/check-mark.png" alt="">
         <p><strong>Sparen Sie bis zu 60% </strong>Ihrer Kosten</p>
@@ -776,21 +772,24 @@
         <p>Professionelle Anrufverwaltung mit <strong>lokalem Support aus Österreich</strong></p>
     </div>
     <div>
-        <button class=" mt-[49px] px-13 py-4 bg-yellow-500 border-1 border-yellow-100 rounded-full text-center font-bold text-white">Jetzt Kostenlos Beraten Lassen</button>
-        <div class="flex mt-5 pb-[86px]">
+        <button class=" mt-[49px] w-full md:w-[361px] md:px-13 py-4 bg-yellow-500 border-1 border-yellow-100 rounded-full text-center font-bold text-white">Jetzt Kostenlos Beraten Lassen</button>
+        <div class="flex mt-5 pb-[86px] ml-5 w-full">
             <img src="./img/five-stars.svg" alt="">
             <p>Über <strong>40.000</strong> zufriedene Kunden</p>
         </div>
     </div>
 </div>
+<div >
+    <img src="/img/girl.png" alt="" class="w-full h-[600px]">
 
 </div>
+</div>
 <footer class="bg-black flex p-5">
-    <a href="#" class="text-[#CFCFCF] ml-20 mt-3">© 2025 HostProfis ISP Telekom GmbH</a>
-    <img src="/img/footer-logo.png" alt="" class="ml-50">
-    <p class="text-white ml-40 mt-3">Impressum</p>
-    <p class="text-white ml-5 mt-3">AGB</p>
-    <p class="text-white ml-5 mt-3">Datenschutz</p>
+    <a href="#" class="text-[#CFCFCF] md:ml-20 mt-3">© 2025 HostProfis ISP Telekom GmbH</a>
+    <img src="/img/footer-logo.png" alt="" class="md:ml-50">
+    <p class="text-white md:ml-40 mt-3">Impressum</p>
+    <p class="text-white md:ml-5 mt-3">AGB</p>
+    <p class="text-white md:ml-5 mt-3">Datenschutz</p>
 </footer>
 </body>
 </html> 
