--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
     <title>Hostprofis LP 4P (DE)</title>
 </head>
 <body>
-    <nav class="bg-[#301900] px-40">
-        <ul class="flex  p-4 text-white gap-25">
-            <li><a href="#" class="hover:text-gray-400 flex "><img src="/img/red-white-circle.png" alt="" class="">AUS ÖSTERREICH</a></li>
-            <li><a href="#" class="hover:text-gray-400 flex"><img src="/img/coin-img.png " alt="" class="">BIS ZU 60% GÜNSTIGER</a></li>
-            <li class=" lg:block hidden"><a href="#" class="hover:text-gray-400 flex"><img src="/img/file-img.png" alt="" class="">JEDERZEIT KÜNDBAR</a></li>
-            <li><a href="#" class="hover:text-gray-400 flex "><img src="/img/user-img.png" alt="" class="">40.000+ KUNDEN</a></li>
+    <nav class="bg-[#301900] md:px-40 ">
+        <ul class="flex p-5 text-white md:gap-15">
+            <li class="w-full"><a href="#" class="hover:text-gray-400 flex "><img src="/img/red-white-circle.png" alt="" class="">AUS ÖSTERREICH</a></li>
+            <li class="w-full"><a href="#" class="hover:text-gray-400 flex"><img src="/img/coin-img.png " alt="" class="sm:w-5 ">BIS ZU 60% GÜNSTIGER</a></li>
+            <li class="w-full lg:block hidden"><a href="#" class="hover:text-gray-400 flex"><img src="/img/file-img.png" alt="" class="">JEDERZEIT KÜNDBAR</a></li>
+            <li class="w-full lg:block hidden"><a href="#" class="hover:text-gray-400 flex "><img src="/img/user-img.png" alt="" class="">40.000+ KUNDEN</a></li>
     </nav>
     
 
@@ -32,8 +32,8 @@
             <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 1h15M1 7h15M1 13h15"/>
         </svg>
     </button>
-    <div class="hidden w-full md:block md:w-auto px-20" id="navbar-default">
-      <ul class="font-medium flex flex-col p-4 gap-8 md:p-0 mt- border border-gray-100 rounded-lg md:flex-row md:space-x-8 rtl:space-x-reverse">
+    <div class="hidden w-full md:block md:w-auto md:px-20" id="navbar-default">
+      <ul class="font-medium flex flex-col p-4 md:gap-8 md:p-0 mt- border border-gray-100 rounded-lg md:flex-row md:space-x-8 rtl:space-x-reverse">
         <li>
           <a href="#" class="block py-2 px-3 text-black rounded-sm md:p-0 mt-5" aria-current="page">FUNKTIONEN</a>
         </li>
@@ -203,7 +203,7 @@
             <img src="./img/laptop-img .png" alt="">
         </div>
         <div class="md:w-[531px] md:ml-20 md:mt-10 w-full mr-3">
-            <h1 class=" md:text-3xl text-2xl font-bold">Persönlicher und regionaler Support aus Österreich</h1>
+            <h1 class=" md:text-3xl text-2xl font-bold mt-10">Persönlicher und regionaler Support aus Österreich</h1>
             <p class="md:mr-13 mt-[18px]">Wir sind ein österreichisches Unternehmen mit Standorten in allen Bundesländern. Sie erreichen uns jederzeit – und bei dringenden Fällen sind wir blitzschnell vor Ort!</p>
                 <div class="mt-6">
                 <div class="flex gap-2">
@@ -251,7 +251,7 @@
             <img src="./img/image 506.png" alt="">
         </div>
         <div class="md:w-[531px] md:ml-20 md:mt-10">
-            <h1 class="md:text-3xl text-2xl mr-4 font-bold md:mr-10">Professionelle Geschäftsanrufe von jedem Gerät aus tätigen</h1>
+            <h1 class="md:text-3xl text-2xl mr-4 font-bold md:mr-10 mt-10">Professionelle Geschäftsanrufe von jedem Gerät aus tätigen</h1>
             <p class="md:mr-25 mt-5">Bleiben Sie überall erreichbar – ob im Büro, unterwegs oder im Home-Office:</p>
             <div class="mt-6">
                 <div class="flex gap-2">
@@ -295,7 +295,7 @@
         </div>
     <div class="bg-[#FAF7EB] px-6">
         <hr class="border-1 border-yellow-500">
-        <h1 class="text-3xl font-bold  md:ml-90 mt-30 mb-10">60% weniger Kosten bei 100x mehr Leistung</h1>
+        <h1 class="text-3xl font-bold  md:ml-90 mt-30 mb-10 sm:mt-10">60% weniger Kosten bei 100x mehr Leistung</h1>
         <div class="flex md:ml-60">
             <div>
                 <img src="/img/check-mark.png" alt="" class="mr-3 md:ml-10 ">
@@ -461,7 +461,7 @@
             <h1 class="md:text-4xl font-bold mb-3 md:text-center text-[25px]">Das sagen unsere Kunden</h1>
             <p class="md:text-center">Unternehmen wie Ihres vertrauen bereits auf Hostprofis</p>
         </div>
-        <div class="md:flex mx-4">
+        <div class="md:flex sm:mx-6 md:mx-8 ">
             <div class="">
                 <div class="border-1 border-yellow-500 w-full md:w-100 rounded-lg p-5 bg-[#FAF7EB] mb-10">
                     <p class="md:w-75">"Früher hatten unsere Kunden nur unsere privaten Handynummern. Jetzt erreichen sie eine professionelle automatische Zentrale, die sie direkt zum richtigen Ansprechpartner weiterleitet"</p>
@@ -784,7 +784,7 @@
 </div>
 <div class="md:flex px-6">
 <div class="md:ml-[71px] md:mt-[120px] mt-[56px]">
-    <h1 class="md:text-5xl font-bold md:mr-[500px] text-3xl">Starten Sie jetzt mit moderner Cloud-Telefonie</h1>
+    <h1 class="md:text-5xl font-bold md:mr-[500px] text-3xl md:w-[723px]">Starten Sie jetzt mit moderner Cloud-Telefonie</h1>
     <p class="mt-6 md:w-140">Vereinbaren Sie ein kurzes Gespräch mit unserem Team und erleben Sie, wie viel einfacher Geschäftstelefonie sein kann.</p>
     <div class="flex mt-6 gap-3">
         <img src="./img/check-mark.png" alt="">
@@ -806,17 +806,19 @@
         </div>
     </div>
 </div>
-<div >
-    <img src="/img/girl.png" alt="" class="w-full h-[600px]">
+<div>
+    <img src="/img/girl.png" alt="" class=" h-[600px]">
 
 </div>
 </div>
-<footer class="bg-black flex p-5">
+<footer class="bg-black md:flex p-5">
     <a href="#" class="text-[#CFCFCF] md:ml-20 mt-3">© 2025 HostProfis ISP Telekom GmbH</a>
-    <img src="/img/footer-logo.png" alt="" class="md:ml-50">
-    <p class="text-white md:ml-40 mt-3">Impressum</p>
-    <p class="text-white md:ml-5 mt-3">AGB</p>
-    <p class="text-white md:ml-5 mt-3">Datenschutz</p>
+    <img src="/img/footer-logo.png" alt="" class="md:ml-50 ">
+    <div class="flex gap-5 text-[#CFCFCF] mt-3 md:ml-20">
+        <a href="#">Impressum</a>
+        <a href="#">Datenschutz</a>
+        <a href="#">AGB</a>
+    </div>
 </footer>
 </body>
 </html> 
